--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,5 +52,11 @@
 		"variant": "cpp",
 		"vector": "cpp",
 		"algorithm": "cpp"
+	},
+	"github.copilot.enable": {
+		"*": true,
+		"plaintext": false,
+		"markdown": false,
+		"scminput": false
 	}
 }
